# saker_mjukvaraV2

./: securityFixes.md  sårbarheter.md  uppgift.md
client/: .gitignore  captcha.js  index.html  info.html  main.js  oauth.js  package-lock.json  post.html  postMethods.js  posts.js  search.js  style.css  user.js
client/Policies in md-format/: bugBountyPolicy.md  integritetsPolicy.md
client/html/: Integrity.html  index.html  info.html  post.html  vulnerability.html
client/policies/: bugBountyPolicy.md  integritetsPolicy.md
client/posts/: postMethods.js  posts.js  search.js
client/style/: info.css  style.css
client/user/: user.js
oauth/: Cargo.toml
oauth/src/: main.rs
server/: .gitignore  Cargo.toml  logs.txt
server/client/: index.html
server/script/: LoginAttempts.py
server/src/: db.rs  hash.rs  http_methods.rs  login.rs  main.rs  models.rs  routes.rs  user.rs  utils.rs
server/src/database/: db.rs
server/src/http_methods/: post_methods.rs  routes.rs  user_methods.rs
server/src/login/: admin_login.rs  auth.rs  check_user_auth.rs  form_login.rs  github.rs  logout.rs
server/src/models/: admin.rs  authentication.rs  user.rs  user_post.rs
server/src/utils/: rate_limiter.rs  validate.rs
