[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }

oauth2 = "4.4.2"
base64 = "0.21.7"
rand = "0.8.5"
url = "2.1"
http = "1.0.0"

futures = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hyper = "0.14.28"
tracing = "0.1.40"
tokio = "1.35.1"
mime = "0.3.17"
