[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.4.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
oauth2 = "4.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mime = "0.3.17"

