[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
async-std = "1.10"
mongodb = "2.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
futures-util = "0.3"
actix-cors = "0.7.0"
http = "1.0.0"
bcrypt = "0.15.0"
actix-session = { version = "0.9.0", features = ["cookie-session"]  }
mime = "0.3.17"
oauth2 = "4.4.2"
url = "2.5.0"
serde_json = "1.0.111"
validator = { version = "0.16.1", features = ["derive"] }
uuid = "1.7.0"



